# lazydag

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: README.md  pipeline.py  processes.py  settings.py  topology.yaml
examples/config/: run.yaml
lazydag/: collections.py  core.py  pipeline.py  scheduler.py  schematic.py
lazydag/cli/: appless_commands.py  main.py  pipeline.py  run.py  topology.py  utils.py
lazydag/conf/: settings.py
lazydag/configs/: __init__.py  run.py
lazydag/contrib/: objects.py
lazydag/core/: misc.py  object.py  paths.py  pipeline.py  process.py  scheduler.py
tests/: test_collections.py  test_integration.py  test_scheduler.py
tests/contrib/objects/: test_fs_json_dict.py
